# tabflowmini

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: metrics.json
examples/: quickstart.py
tabflowmini/: __init__.py  benchmark.py  data.py  synth.py
tests/: test_tabflowmini.py
