[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabflowmini"
version = "0.1.0"
description = "A small tabular synthetic data generator inspired by rectified flow."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["tabular-data", "synthetic-data", "flow-matching", "privacy", "benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/tabflowmini"

[tool.hatch.build.targets.wheel]
packages = ["tabflowmini"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F", "I"]
